Editor accepts Esc as a character, enter key sometimes handled twice. Patch by Chris Pearce. b=396832,401425 r=josh sr=roc